syntax = "proto3";

package posts.v1;

option go_package = "github.com/acme/postservice/internal/protos/gen/posts/v1;postsv1";

// PostService provides operations for managing posts
service PostService {
  // CreatePost creates a new post
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  
  // GetPost retrieves a post by ID
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  
  // ListPosts retrieves all posts for a user
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  
  // UpdatePost updates an existing post
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  
  // DeletePost deletes a post by ID
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

// Post represents a blog post
message Post {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  int64 created_at = 5;  // Unix timestamp in milliseconds
  int64 updated_at = 6;  // Unix timestamp in milliseconds
}

message CreatePostRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  string user_id = 1;
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  optional string title = 2;
  optional string content = 3;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {
  string message = 1;
}

